--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Todo</string>
     <string name="add">Add</string>
     <string name="add_an_item_here">Add an item here!</string>
+    <string name="edit_the_item">Edit the item!</string>
+    <string name="update_item">Update Item</string>
+    <string name="update">Update Item!</string>
 </resources>
